--- a/admin/src/i18n/generated_locales/sv.json
+++ b/admin/src/i18n/generated_locales/sv.json
@@ -1,4 +1,12 @@
 {
+    "box_terminator": {
+        "can_be_terminated_in": "Kan termineras {{relative_time}}",
+        "can_terminate": "Kan termineras",
+        "enter_label_id": "Skriv in etikett-ID",
+        "expires": "Utgår {{relative_time}}",
+        "no_matching_labels": "Inga matchande etiketter",
+        "view_label": "Visa"
+    },
     "brand": {
         "billing_address": "Stockholm Makerspace - Drottning Kristinas väg 53, 114 28 Stockholm",
         "email": "info@makerspace.se",
@@ -13,13 +21,13 @@
         "relative_generic": {
             "date_future": "{{date}}",
             "date_past": "{{date}}",
-            "days_ago": "För {{count}} dagar sedan",
-            "hours_ago": "För {{count}} timmar sedan",
-            "in_days": "Om {{count}} dagar",
-            "in_hours": "Om {{count}} timmar",
-            "in_minutes": "Om {{count}} minuter",
-            "minutes_ago": "För {{count}} minuter sedan",
-            "now": "Just nu"
+            "days_ago": "för {{count}} dagar sedan",
+            "hours_ago": "för {{count}} timmar sedan",
+            "in_days": "om {{count}} dagar",
+            "in_hours": "om {{count}} timmar",
+            "in_minutes": "om {{count}} minuter",
+            "minutes_ago": "för {{count}} minuter sedan",
+            "now": "just nu"
         }
     }
 }
