Show overdue days in task list.

--- a/admin/src/i18n/generated_locales/en.json
+++ b/admin/src/i18n/generated_locales/en.json
@@ -75,6 +75,7 @@
             "last_completer": "Last Completed By",
             "never": "Never",
             "no_cards": "No tasks available.",
+            "overdue": "Overdue",
             "score": "Score",
             "task": "Task",
             "title": "All Tasks"
