--- a/admin/src/i18n/generated_locales/sv.json
+++ b/admin/src/i18n/generated_locales/sv.json
@@ -75,6 +75,7 @@
             "last_completer": "Senast slutförd av",
             "never": "Aldrig",
             "no_cards": "Inga uppgifter tillgängliga.",
+            "overdue": "Försenad",
             "score": "Poäng",
             "task": "Uppgift",
             "title": "Alla uppgifter"
