Make it possible to retake quizzes.

--- a/admin/src/i18n/generated_locales/en.json
+++ b/admin/src/i18n/generated_locales/en.json
@@ -38,7 +38,9 @@
         "table": {
             "completion": "Completion",
             "correctly_answered": "Correctly answered questions",
-            "quiz": "Quiz"
+            "max_achieved": "max achieved",
+            "quiz": "Quiz",
+            "status": "Status"
         }
     },
     "member_tasks": {
