--- a/admin/src/i18n/generated_locales/sv.json
+++ b/admin/src/i18n/generated_locales/sv.json
@@ -38,7 +38,9 @@
         "table": {
             "completion": "Slutförande",
             "correctly_answered": "Rätt besvarade frågor",
-            "quiz": "Quiz"
+            "max_achieved": "max uppnått",
+            "quiz": "Quiz",
+            "status": "Status"
         }
     },
     "member_tasks": {
